Compiler_Project/rsc/tests/typecheck/invalid/3if_call.ml
if 3 then print_int 3 else print_int 4
